# DraygonTensor

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build_debug.bat  build_release.bat  doxy.config  dtt.py  generate_project_debug.bat  generate_project_release.bat
cmake/modules/: Common.cmake  FindBullet.cmake  FindGLEW.cmake  FindGit.cmake  FindLua.cmake  FindLuaBridge.cmake  FindLuaJIT.cmake  FindSDL2.cmake  FindSTB.cmake  Findassimp.cmake
cmake/superbuild/: CMakeLists.txt  External-ASSIMP.cmake  External-Bullet.cmake  External-GLEW.cmake  External-Git.cmake  External-GoogleTest.cmake  External-Lua.cmake  External-LuaBridge.cmake  External-LuaJIT.cmake  External-RapidJSON.cmake  External-SDL2.cmake  External-SFML.cmake  External-STB.cmake  Superbuild.cmake
docs/: AIExplanation.org  CODESTYLE.md  CodingStandards.md  CodingStandards.org  CodingStyleGuide.md  Evaluation.txt  GitWorkflow.org  PROGRAMMERSMANUAL.md  PhysicsExplanation.org  ProgrammersManual.md  SoftwareQuality.org  SpecialFeatures.org  UserManual.org
project/: CMakeLists.txt
project/animation/: CMakeLists.txt
project/animation/src/: CMakeLists.txt  main.cpp
project/bullet/: CMakeLists.txt
project/col/: CMakeLists.txt
project/console/: CMakeLists.txt
project/console/assets/: config.json
project/console/src/: CMakeLists.txt  main.cpp
project/empty/: CMakeLists.txt
project/empty/src/: main.cpp
project/example/: CMakeLists.txt
project/example/src/: main.cpp
project/milestone1/: CMakeLists.txt
project/milestone1/src/: main.cpp
project/multilayer/: CMakeLists.txt
project/pathfinding/: CMakeLists.txt
project/physics/: CMakeLists.txt
project/physics/src/: main.cpp
project/platform/: CMakeLists.txt
project/render_system/: CMakeLists.txt
project/script/: CMakeLists.txt
project/script_console/: CMakeLists.txt
project/script_message/: CMakeLists.txt
project/skybox/: CMakeLists.txt
project/sound/: CMakeLists.txt
project/steps/: CMakeLists.txt
project/terrain/: CMakeLists.txt
project/terrain/src/: CMakeLists.txt  main.cpp
project/ui/: CMakeLists.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  Config.cpp  Config.h  Engine.cpp  Engine.h
src/engine/common/: Common.cpp  Common.h  Common.hpp  Handle.h  HandleCommon.h  HandleManager.cpp  HandleManager.h  StreamBuffer.cpp  StreamBuffer.h  StreamBuffer.hpp  StringIntern.cpp  StringIntern.h
src/engine/entity/: ComponentManager.h  ComponentManager.hpp  ComponentStore.h  ComponentStore.hpp  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IComponentManager.h  Instance.h
src/engine/json/: Json.cpp  Json.h  JsonObject.cpp  JsonObject.h  JsonTypes.h
src/engine/message/: Message.h  MessageBus.cpp  MessageBus.h  MessageFactory.cpp  MessageFactory.h  MessageHelper.cpp  MessageHelper.h
src/engine/resource/: IResource.h  MaterialResource.cpp  MaterialResource.h  MaterialResourceManager.cpp  MaterialResourceManager.h  MeshResource.cpp  MeshResource.h  PrefabResource.h  ResourceFactory.h  ResourceFactory.hpp  ShaderResource.cpp  ShaderResource.h  TerrainResource.cpp  TerrainResource.h  TextureResource.cpp  TextureResource.h  TextureResourceManager.cpp  TextureResourceManager.h
src/engine/strings/: FixedString.cpp  FixedString.h  StringUtils.h
src/engine/system/: Console.cpp  Console.h  ISystem.h  Physics.cpp  Physics.h
src/engine/system/custom_physics/: CustomPhysics.cpp  CustomPhysics.h  CustomPhysicsComponent.h  CustomPhysicsComponentManager.cpp  CustomPhysicsComponentManager.h  CustomPhysicsLuaBindings.cpp  Particle.cpp  Particle.h
src/engine/system/input/: Input.cpp  Input.h  InputContext.cpp  InputContext.h  InputLuaBindings.cpp
src/engine/system/physics/: CollisionFine.cpp  CollisionFine.h  ContactResolver.cpp  ContactResolver.h  Contacts.cpp  Contacts.h  ForceGenerator.cpp  ForceGenerator.h  MotionStateExample.cpp  MotionStateExample.h  Physics.cpp  Physics.h  PhysicsComponent.h  PhysicsComponentManager.cpp  PhysicsComponentManager.h  PhysicsCore.h  PhysicsHandler.cpp  PhysicsHandler.h  PhysicsLuaBindings.cpp  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
src/engine/system/platform/: GraphicsContext.h  IPlatformSubSystem.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.h  Platform.cpp  Platform.h  Video.cpp  Video.h  Window.cpp  Window.h
src/engine/system/render/: ButtonComponent.h  ButtonComponentManager.cpp  ButtonComponentManager.h  CameraComponent.h  CameraComponentManager.cpp  CameraComponentManager.h  ConstantBuffer.cpp  ConstantBuffer.h  ConstantBufferDescription.cpp  ConstantBufferDescription.h  GLRenderer.cpp  GLRenderer.h  IRenderer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  RenderCommon.h  RenderComponent.h  RenderComponentManager.cpp  RenderComponentManager.h  RenderLuaBindings.cpp  ShaderParameter.cpp  ShaderParameter.h  Skybox.cpp  Skybox.h  SubMesh.h  TerrainComponent.h  TerrainComponentManager.cpp  TerrainComponentManager.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  UniformBlock.cpp  UniformBlock.h  VertexBufferDescription.cpp  VertexBufferDescription.h
src/engine/system/scene/: TransformComponent.h  TransformComponentManager.cpp  TransformComponentManager.h
src/engine/system/script/: LuaAPI.cpp  LuaEnvironment.cpp  LuaEnvironment.h  LuaHeaders.h  LuaHelper.cpp  LuaHelper.h  LuaMathAPI.cpp  Script.cpp  Script.h  ScriptBindingSet.cpp  ScriptBindingSet.h  ScriptComponent.h  ScriptComponentManager.cpp  ScriptComponentManager.h  ScriptLuaBindings.cpp  ScriptTemp
src/engine/temp/: Hello.cpp  Hello.h
src/math/: CMakeLists.txt  MathHelper.cpp  MathHelper.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Precision.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.cpp
test/src/engine/: ConfigTestSuite.h  JsonTestSuite.h
test/src/engine/common/: CommonTestSuite.h  StreamBufferTestSuite.h
test/src/math/: Matrix3TestSuite.h  Matrix4TestSuite.h  QuaternionTestSuite.h  Vector3TestSuite.h  Vector4TestSuite.h
(+28 files in other folders)
